api: improvements on the API docs and some API modifications
