# public/swagger.json
@@ -63,33 +63,16 @@
     "/api/groups": {
       "get": {
         "summary": "Returns the list of all groups",
+        "description": "Returns the list of all groups from the database",
         "tags": [
           "groups"
-        ],
-        "parameters": [
-          {
-            "in": "query",
-            "name": "id",
-            "description": "ID of the group to get",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "in": "query",
-            "name": "sort",
-            "description": "Sorts the list of groups alphabetically",
-            "schema": {
-              "type": "boolean"
-            }
-          }
         ],
         "responses": {
           "200": {
             "description": "Returns the list of groups"
           },
           "400": {
-            "description": "The ID provided doesn't exist in the database"
+            "description": "Failed to connect to the database"
           }
         }
       },
@@ -117,12 +100,39 @@
             "description": "Title has not been provided"
           }
         }
+      }
+    },
+    "/api/groups?id={id}": {
+      "get": {
+        "summary": "Return a group using the ID",
+        "tags": [
+          "groups"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "id",
+            "description": "ID of the group to get",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns the group object with that ID"
+          },
+          "400": {
+            "description": "The ID provided doesn't exist in the database"
+          }
+        }
       },
       "delete": {
         "tags": [
           "groups"
         ],
-        "summary": "Updates the name of the group",
+        "summary": "Deletes a group",
+        "description": "Deletes a group from the database",
         "parameters": [
           {
             "in": "query",
@@ -139,7 +149,7 @@
             "description": "Successfully deletes the group"
           },
           "400": {
-            "description": "ID has not been provided to delete the group"
+            "description": "ID has not been provided to delete the group or the ID provided doesn't exist in the database."
           }
         }
       },
@@ -173,7 +183,33 @@
             "description": "Updates the note group succesfully"
           },
           "400": {
-            "description": "Title or id have not been provided"
+            "description": "Title or id have not been provided, or the ID provided doesn't exist in the database."
+          }
+        }
+      }
+    },
+    "/api/groups?sort={sort}": {
+      "get": {
+        "summary": "Returns the list of all groups sorted alphabetically",
+        "tags": [
+          "groups"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "sort",
+            "description": "Sorts the list of groups alphabetically",
+            "schema": {
+              "type": "boolean"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns the list of groups alphabetically"
+          },
+          "400": {
+            "description": "Failed to connect to the database"
           }
         }
       }
@@ -184,10 +220,13 @@
           "locale"
         ],
         "summary": "Returns the current locale",
-        "description": "Returns the current locale from the 'NEXT_LOCALE' cookie.",
+        "description": "Returns the current locale from the **NEXT_LOCALE** cookie.",
         "responses": {
           "200": {
             "description": "Returns the current locale"
+          },
+          "400": {
+            "description": "The cookie **NEXT_LOCALE** does not exist"
           }
         }
       }
@@ -199,19 +238,12 @@
         ],
         "summary": "Returns all the notes",
         "description": "Returns all the notes from the database.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "query",
-            "description": "ID for the note to get",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "Returns all the notes"
+          },
+          "400": {
+            "description": "Failed to connect to the database"
           }
         }
       },
@@ -299,6 +331,60 @@
           },
           "400": {
             "description": "The ID provided doesn't exist in the DB or no ID provided in the query."
+          }
+        }
+      }
+    },
+    "/api/notes?id={id}": {
+      "get": {
+        "tags": [
+          "notes"
+        ],
+        "summary": "Returns the note with that ID",
+        "description": "Returns the note with that ID from the database.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "description": "ID for the note to get",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns the note with that ID"
+          },
+          "400": {
+            "description": "The ID provided doesn't exist in the DB"
+          }
+        }
+      }
+    },
+    "/api/notes?pinned={pinned}": {
+      "get": {
+        "tags": [
+          "notes"
+        ],
+        "summary": "Returns all the pinned notes",
+        "description": "Returns all the pinned notes from the database.",
+        "parameters": [
+          {
+            "name": "pinned",
+            "in": "query",
+            "description": "Tells the API to retrieve only the pinned notes",
+            "schema": {
+              "type": "boolean"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns all the pinned notes"
+          },
+          "400": {
+            "description": "Failed to connect to the database"
           }
         }
       }
